--- a/myapp/static/myapp/css/gallery.css
+++ b/myapp/static/myapp/css/gallery.css
@@ -63,7 +63,7 @@ hr {
   #gallery > a {
     display: block;
     margin-bottom: 10px;
-    margin-top: 10px;
+    margin-top: 0px;
   }
   #gallery > a > img {
     display: initial;
@@ -72,6 +72,8 @@ hr {
     max-height: 100%;
     margin-left: 4%;
     margin-right: 4%;
+    margin-top: 0px;
+    padding-top: 0px;
   }
 }
 
