--- a/myapp/static/myapp/css/pricing.css
+++ b/myapp/static/myapp/css/pricing.css
@@ -23,13 +23,14 @@ h2 {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 100px;
+  margin-top: 60px;
   margin-bottom: 10px;
 }
 
 #email {
   text-align: center;
   margin: auto;
+  margin-bottom: 40px;
 }
 
 @media screen and (max-width: 481px) {
